--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "node main.js",
-    "compile": "cd native_module && cmake-js compile && cp build\\Release\\native.node ..\\native.node"
+    "compile": "cd native_module && cmake-js compile && cp build/Release/native.node ../native.node"
   },
   "repository": {
     "type": "git",
